--- a/index.html
+++ b/index.html
@@ -4,14 +4,14 @@
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
-  <title>France MICHELIN 3-Stars - Zachary Carnell</title>
+  <title>MICHELIN's Top-Rated Restaurants in France</title>
   <link rel="stylesheet" href="https://unpkg.com/leaflet@1.9.2/dist/leaflet.css" integrity="sha256-sA+zWATbFveLLNqWO2gtiw3HL/lh1giY/Inf1BJ0z14=" crossorigin="">
   <link rel="stylesheet" href="styles/first_map.css">
 </head>
 
 <body>
   <div id="container">
-    <h1>The Best Restaurants in France</h1>
+    <h1>MICHELIN's Top-Rated Restaurants in France</h1>
 
     <p>By Zachary Carnell</p>
 
