--- a/first_map.html
+++ b/first_map.html
@@ -6,7 +6,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
   <title>Hometown Highlights - Zachary Carnell</title>
   <link rel="stylesheet" href="https://unpkg.com/leaflet@1.9.2/dist/leaflet.css" integrity="sha256-sA+zWATbFveLLNqWO2gtiw3HL/lh1giY/Inf1BJ0z14=" crossorigin="">
-  <link rel="stylesheet" href="styles/first_map.css">
+  <link rel="stylesheet" href="styles/main.css">
 </head>
 
 <body>
@@ -15,7 +15,7 @@
 
     <p>By Zachary Carnell</p>
 
-    <div id="map"></div>
+    <div id="firstMap" class="map"></div>
 
     <p class="description">This map shows several meaningful spots in my hometown of Naples, Florida. It includes my favorite place to go at the beach, my favorite place to get slurpees, my local shopping mall, and my childhood church.</p>
   </div>
